fixed what we do getting wrapped to new line

--- a/src/templates/home.css
+++ b/src/templates/home.css
@@ -1,6 +1,6 @@
 .home-header {
   margin: 18px auto 24px auto;
-  font-size: 60px;
+  font-size: 54px;
   color: black;
   line-height: 0.7;
 }
@@ -8,8 +8,3 @@
 .our-films {
   margin-bottom: 35px;
 }
-/* 
-hr {
-  margin-top: 40px;
-  margin-bottom: 40px;
-} */
